# simple_gui

./: .gitignore  CMakeLists.txt
src/: glad.c  glad.h  main.cpp  simple_gui.hpp  simple_gui_gl3.hpp  simple_gui_sdl2.hpp
